--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
             <version>2.20.64</version>         
         </dependency>        
 
+       <dependency>
+          <groupId>org.springdoc</groupId>
+          <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+          <version>2.8.5</version> <!--2.7.0   2.8.5--> <!--versao 3.8.0 esta com problemas-->
+       </dependency>    
+       
 	</dependencies>
 
 	<build>
